# dakora-examples

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
quickstart/: 00_template_render.py  01_template_with_tracing.py
scripts/: doctor.py  run_example.py  setup_env.py
shared/: templates.py  utils.py
