[project]
name = "dakora-examples"
version = "0.1.0"
description = "Examples for using Dakora prompt templates with OpenTelemetry tracing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dakora Labs", email = "support@dakora.io"}
]

dependencies = ["python-dotenv>=1.0.0"]

[project.urls]
Homepage = "https://github.com/dakora-labs/dakora-examples"
Documentation = "https://docs.dakora.io"

[project.optional-dependencies]
# Install everything needed for quickstart examples
quickstart = [
  "dakora>=0.1.0",
  "dakora-instrumentation>=0.2.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-exporter-otlp-proto-http>=1.24.0",
  "opentelemetry-instrumentation-openai>=0.1.0",
  "openai>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
